# meow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: SLASH-COMMANDS.md
src/: app.rs  commands.rs  main.rs
src/cli/: mod.rs
src/db/: mod.rs  query.rs
src/tui/: autocomplete.rs  editor.rs  mod.rs  results.rs  sidebar.rs  statusbar.rs  ui.rs
tests/: integration_slash.rs
tests/tmux/: README.md  run_tests.sh  update_golden.sh
tests/tmux/screenshots/: multi_set1.txt  multi_set2.txt  slash_conninfo.txt  slash_d.txt  slash_df.txt  slash_di.txt  slash_dn.txt  slash_ds.txt  slash_dt.txt  slash_dv.txt  slash_help.txt  slash_timing.txt  slash_x.txt
